--- a/[05] 소스코드/frontend/public/index.html
+++ b/[05] 소스코드/frontend/public/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>static/logo2.png">
-    <title>Bloom 부동산 거래 내역 관리</title>
+    <link rel="icon" href="<%= BASE_URL %>static/3logo.png">
+    <title>진실의방</title>
 
     <link rel="stylesheet" type="text/css" href="<%= BASE_URL %>bootstrap/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="<%= BASE_URL %>css/style.css">
